--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@
     height: 400px;
     background-color: rgb(42, 81, 255);
     position: absolute;
-    top: 18%;
-    left: 33%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 2;
 }
 .big-square:hover {
@@ -31,7 +32,7 @@
     border-radius: 10%;
     background-color: yellow;
     position: absolute;
-    top: 18%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, 50%);
     z-index: 3;
@@ -43,7 +44,7 @@
     border-radius: 50%;
     background-color: red;
     position: absolute;
-    top: 18%;
+    top: 25%;
     left: 50%;
     transform: translate(-150%, -50%);
     z-index: 1;
@@ -59,7 +60,7 @@
     border-radius: 50%;
     background-color: red;
     position: absolute;
-    top: 18%;
+    top: 25%;
     left: 50%;
     transform: translate(50%, -50%);
     z-index: 1;
@@ -75,7 +76,7 @@
     border-radius: 50%;
     background-color: red;
     position: absolute;
-    top: 18%;
+    top: 25%;
     left: 50%;
     transform: translate(-150%, 150%);
     z-index: 1;
@@ -91,7 +92,7 @@
     border-radius: 50%;
     background-color: red;
     position: absolute;
-    top: 18%;
+    top: 25%;
     left: 50%;
     transform: translate(50%, 150%);
     z-index: 1;
