--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@
     min-width: 610px;
     height: 1000px;
     margin: 0 auto;
+}
+
+.figure {
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
-.big-square {
+.figure__big-square {
     width: 40%;
     height: 40%;
     background-color: rgb(42, 81, 255);
@@ -23,12 +28,12 @@
     transform: translate(-50%, -50%);
     z-index: 2;
 }
-.big-square:hover {
+.figure__big-square:hover {
     background-color: rgb(253, 36, 235);
     z-index: 4;
 }
 
-.small-square {
+.figure__small-square {
     width: 20%;
     height: 20%;
     border-radius: 10%;
@@ -40,66 +45,54 @@
     z-index: 3;
 }
 
-.top-left-circle {
+.figure-cirlce {
     width: 20%;
     height: 20%;
     border-radius: 50%;
     background-color: red;
     position: absolute;
+}
+
+.figure-cirlce--top-left {
     top: 50%;
     left: 50%;
     transform: translate(-150%, -150%);
     z-index: 1;
 }
-.top-left-circle:hover {
+.figure-cirlce--top-left:hover {
     background-color: rgb(36, 228, 253);
     z-index: 3;
 }
 
-.top-right-circle {
-    width: 20%;
-    height: 20%;
-    border-radius: 50%;
-    background-color: red;
-    position: absolute;
+.figure-cirlce--top-right {
     top: 50%;
     left: 50%;
     transform: translate(50%, -150%);
     z-index: 1;
 }
-.top-right-circle:hover {
+.figure-cirlce--top-right:hover {
     background-color: purple;
     z-index: 3;
 }
 
-.bottom-left-circle {
-    width: 20%;
-    height: 20%;
-    border-radius: 50%;
-    background-color: red;
-    position: absolute;
+.figure-cirlce--bottom-left {
     top: 50%;
     left: 50%;
     transform: translate(-150%, 50%);
     z-index: 1;
 }
-.bottom-left-circle:hover {
+.figure-cirlce--bottom-left:hover {
     background-color: rgb(255, 197, 8);
     z-index: 3;
 }
 
-.bottom-right-circle {
-    width: 20%;
-    height: 20%;
-    border-radius: 50%;
-    background-color: red;
-    position: absolute;
+.figure-cirlce--bottom-right {
     top: 50%;
     left: 50%;
     transform: translate(50%, 50%);
     z-index: 1;
 }
-.bottom-right-circle:hover {
+.figure-cirlce--bottom-right:hover {
     background-color: greenyellow;
     z-index: 3;
 }
